--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 <body>
 <h1 align="center">Змеи и лестницы</h1>
-<p id="text"></p>
 <table id="table" bgcolor=#ffffff align="center" style="border: solid">
    <tr align="center">
        <th id="p100" name="0">100<img id="i100_1" src="" style="width: 15px;"><img id="i100_2" src="" style="width: 15px;"></th>
@@ -145,6 +144,7 @@
    <button id="restart_butt" onclick="restart()" hidden="true" style="height: 50px; background: pink; margin: 10px;">Играть снова</button>
 </div>
 <button id="cube1_butt" onclick="cube1()" hidden=true ><img id="cube1" src="cube.png" style="width: 50px; "></button>
+<h1 id="text" align="center"></h1>
 </body>
 <script src="main.js"></script>
 </html>
